--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,11 @@
 services:
 
 - type: web
-  name: vietnam-stock-news-api
+  name: news2
   env: python
   buildCommand: pip install -r requirements.txt
   startCommand: gunicorn –bind 0.0.0.0:$PORT app:app
+  plan: free
   envVars:
   - key: PYTHON_VERSION
-    value: 3.9.16
-  - key: PORT
-    value: 10000
+    value: 3.11.0
