--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-Flask==2.3.3
-Flask-CORS==4.0.0
-feedparser==6.0.10
-requests==2.31.0
-beautifulsoup4==4.12.2
-pytz==2023.3
-gunicorn==21.2.0
+fastapi
+uvicorn
+feedparser
+sentence-transformers
